# benchmarking_tutorial

./: .gitignore  README.md
built-in-benchmark-rs/: Cargo.toml
built-in-benchmark-rs/src/: main.rs
built-in-benchmark-rs/src/benches/: optimize_bench.rs  sha512.rs
criterion-benchmark-rs/: Cargo.toml
criterion-benchmark-rs/benches/: bench_main.rs  sha256.rs  sha2562.rs  sha256_iter.rs
criterion-benchmark-rs/src/: lib.rs
std-time-benchmarks-rs/: Cargo.toml
std-time-benchmarks-rs/src/: main.rs
std-time-benchmarks-rs/src/benches/: for_loop.rs  sha256.rs
