[package]
name = "criterion-benchmark-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
sha2 = "0.10.8"
rand = "0.8"

[[bench]]
name = "bench_main"
harness = false